2009-11-11  Warwick Allison  <warwick.allison@nokia.com>, Simon Hausmann  <simon.hausmann@nokia.com>

        Reviewed by Tor Arne Vestbø.

        [Qt] Regression: Preserve the parent of plugin objects when using
        QtWebKit with only a QWebPage.

        * WebCoreSupport/FrameLoaderClientQt.cpp:
        (WebCore::FrameLoaderClientQt::createPlugin): Don't reparent
        plugins to 0.
        * tests/qwebpage/tst_qwebpage.cpp:
        (PluginCounterPage::PluginCounterPage): Initialize m_pluginParent to 0.
        (PluginCounterPage::~PluginCounterPage): Delete the plugin parent later
        (after the page)
        (PluginTracerPage::createPlugin): Assign a dummy parent to the plugin.
        (PluginTracerPage::PluginTracerPage): Set up the plugin parent.
        (tst_QWebPage::createViewlessPlugin): Verify that for viewless pages the
        plugin parent remains unchanged.

2009-11-11  David Boddie  <dboddie@trolltech.com>

        [Qt] Doc: Added internal or hidden placeholder documentation.

        * Api/qwebpage.cpp:

2009-11-11  Martin Smith  <msmith@trolltech.com>

        [Qt] doc: Changed Trolltech to Nokia

        * Api/qwebview.cpp:

2009-11-11  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        https://bugs.webkit.org/show_bug.cgi?id=31323
        Fix a few compiler warnings

        * tests/qwebframe/tst_qwebframe.cpp: Add extra brackets 
        to make it explicit where the else case belongs

2009-11-11  Simon Hausmann  <simon.hausmann@nokia.com>

        Reviewed by Tor Arne Vestbø.

        Fix enabling of software input panel when activating editable elements
        in QGraphicsWebView.

        * Api/qgraphicswebview.cpp:
        (QGraphicsWebViewPrivate::inputMethodEnabled): Implement method to
        query for input method support.
        * Api/qwebpage.cpp:
        (QWebPageWidgetClient::inputMethodEnabled): Ditto for QWidget.